ko/15.6/admin/maintenance-guide.rst
=========
유지보수
=========

개요
====

유지보수 페이지는 시스템의 데이터 조작을 실행할 때 사용합니다.

|image0|

작업 방법
======

재인덱싱
------------

기존 fess 인덱스에서 새 인덱스를 재생성할 수 있습니다.
인덱스의 매핑을 변경하고 싶은 경우 등에 실행합니다.


설정 항목
------

별칭 업데이트
::::::::::::

활성화하면 재인덱싱이 완료된 후 기존 인덱스에 할당된 fess.search와 fess.update 별칭을 새 인덱스로 변경할 수 있습니다.


사전 초기화
:::::::::

활성화하면 사전 설정을 초기화할 수 있습니다.


샤드 수
::::::::

OpenSearch의 샤드 수(index.number_of_shards)를 지정할 수 있습니다.


최대 복제본 수
:::::::::::

OpenSearch의 최대 복제본 수(index.auto_expand_replicas)를 지정할 수 있습니다.


설정 인덱스 재구축
--------------------------

설정 인덱스(fess_config, fess_user, fess_log)를 최신 매핑으로 재구축할 수 있습니다.
이 작업은 백그라운드에서 실행됩니다. 실행하기 전에 설정의 백업 등을 수행해 주십시오.


대상 인덱스
::::::::::::

재구축할 인덱스를 선택합니다. fess_config, fess_user, fess_log에서 선택할 수 있습니다.


기본 데이터 불러오기
::::::::::::::::

활성화하면 재구축 시 기본 데이터를 불러옵니다. 기존 문서는 덮어쓰지 않습니다.


문서 인덱스 리로드
--------------------------

인덱스 설정을 반영하기 위해 문서 인덱스를 리로드할 수 있습니다.


Crawler 인덱스
----------------

fess_crawler 인덱스(크롤링 정보)를 삭제할 수 있습니다.
크롤러 실행 중에는 실행하지 마십시오.


진단
----

로그 파일을 zip 형식으로 다운로드할 수 있습니다.

.. |image0| image:: ../../../resources/images/en/15.6/admin/maintenance-1.png
